--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -1004,7 +1004,7 @@
     <!-- Find Itinerary # -->
     <string name="find_itinerary_pound">Find Itinerary #</string>
     <!-- Expedia Itinerary -->
-    <string name="expedia_itinerary">Expedia Itinerary #</string>
+    <string name="itinerary_TEMPLATE">{brand} Itinerary #</string>
     <!-- Label for exclusive +silver phone number, "Expedia +silver Customer Support" -->
     <string name="Expedia_plus_Silver_Customer_Support">Expedia +silver Customer Support</string>
     <!-- Label for exclusive +gold phone number, "Expedia +gold Customer Support" -->
