Unified skin_infoContactUsString

--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -2834,7 +2834,7 @@
     <!-- Label for "Booking Support" button in info page -->
     <string name="booking_support">Booking Support</string>
     <!-- Title for different ways to connect to Expedia -->
-    <string name="contact_expedia_via">Contact Expedia Via…</string>
+    <string name="contact_via_TEMPLATE">Contact {brand} Via…</string>
     <!-- Contact Expedia via phone -->
     <string name="contact_expedia_phone">Phone</string>
     <!-- Contact Expedia via website -->
