--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -808,7 +808,7 @@
     <!-- A message stating this hotel is all sold out for the given dates searched -->
     <string name="sorry_rooms_sold_out_TEMPLATE">Sorry, all rooms are sold out on {brand}.</string>
     <!-- A message stating this hotel is sold out on Expedia -->
-    <string name="sold_out_on_expedia">Sold out on Expedia</string>
+    <string name="sold_out_on_TEMPLATE">Sold out on {brand}</string>
     <!-- Hotel gallery title -->
     <string name="photos_for_TEMPLATE">Photos for %s</string>
     <!-- Caption for number of rooms left count, i.e. "4 rooms left" -->
