--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -2840,7 +2840,7 @@
     <!-- Contact Expedia via website -->
     <string name="contact_expedia_website">Website</string>
     <!-- Label for "Expedia website" button in info page -->
-    <string name="expedia_website">Expedia Website</string>
+    <string name="website_TEMPLATE">{brand} Website</string>
     <!-- Label for "app support" button in info page -->
     <string name="app_support_TEMPLATE">App Support</string>
     <!-- Label for link to terms and conditions -->
